# G2048

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: rust.yml
android/app/: build.gradle  build.gradle.kts
android/app/src/main/kotlin/sltns/dominic/g2048/: MainActivity.kt
contract/: build.rs
contract/src/: g2048.sol  lib.rs
g2048/: Cargo.toml
g2048/src/: lib.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: core.dart  game.dart  main.dart
lib/controllers/: game_controller.dart
lib/models/: game_state.dart
lib/providers/: game_provider.dart
lib/services/: web3_service.dart
lib/widgets/: game_board.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: MintNFTRentable.tsx  index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
